--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.0.22",
+    "autoprefixer": "^10.4.15",
+    "framer-motion": "^10.16.0",
+    "next-themes": "^0.2.1",
+    "postcss": "^8.4.28",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
